--- a/mvc-ecom-example/index.html
+++ b/mvc-ecom-example/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-commerce Web App</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <div id="app">
     <div id="product-list"></div>
     <div id="product-detail" style="display: none;"></div>
   </div>
-  <script src="model.js"></script>
-  <script src="view.js"></script>
-  <script src="controller.js"></script>
+  <script src="js/model.js"></script>
+  <script src="js/view.js"></script>
+  <script src="js/controller.js"></script>
   <script>
     // Initialize the app
     const model = new Model();
